# streaming-markdown

./: .gitignore  .pubignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PUBLISHING.md  README.md  THIRD_PARTY_LICENSES.md  docs.json  pubspec.yaml
.github/workflows/: ci-main.yml  docs-pages.yml  release-publish.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
doc/: api-overview.md  migration-0.3.0.md
docs/: CNAME  api-overview.mdx  build-a-demo.mdx  contributing.mdx  index.mdx  installation.mdx  migration-0-3.mdx  quick-start.mdx  roadmap.mdx  selection-copy.mdx
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/assets/: chatgpt_blocks.md
example/integration_test/: readme_demo_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  markdown_cases_demo.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/test/: widget_test.dart
example/test/smoke/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: animated_streaming_markdown.podspec  streaming_markdown.podspec
ios/Classes/: streaming_markdown.c  streaming_markdown_incremental.mm  streaming_markdown_rope.mm  tree_sitter_markdown_inline_parser.c  tree_sitter_markdown_inline_scanner.c  tree_sitter_markdown_parser.c  tree_sitter_markdown_scanner.c  tree_sitter_runtime.c
lib/: animated_streaming_markdown.dart  streaming_markdown.dart
lib/src/: markdown_nodes.dart  markdown_render_node.dart  markdown_syntax_tree.dart  native_incremental_markdown_parser.dart  native_incremental_markdown_parser_stub.dart  native_languages_ffi.dart  native_languages_stub.dart  native_rope_buffer.dart  native_rope_buffer_stub.dart  native_symbols.dart  native_symbols_stub.dart  rope_markdown_parser.dart  rope_string.dart  streaming_markdown_parse_worker.dart  streaming_markdown_parse_worker_stub.dart  streaming_markdown_render_text_parsing.dart  streaming_markdown_render_view.dart  tree_sitter_markdown_parser.dart  tree_sitter_markdown_parser_stub.dart
lib/src/model/: block_nodes.dart  render_node.dart  rope.dart
lib/src/native/: incremental_parser.dart  incremental_parser_stub.dart  languages_ffi.dart  languages_stub.dart  rope_buffer.dart
lib/src/parser/: rope_markdown_models.dart  rope_markdown_parser.dart  tree_sitter_markdown_parser.dart  (+1 more)
lib/src/render/: api.dart  (+1 more)
linux/: CMakeLists.txt
macos/: animated_streaming_markdown.podspec  streaming_markdown.podspec
macos/Classes/: streaming_markdown_ts_parser.mm
src/: CMakeLists.txt  streaming_markdown.c  streaming_markdown.h  streaming_markdown_incremental.cpp  streaming_markdown_rope.cpp  streaming_markdown_ts_parser.cpp
test/: streaming_markdown_test.dart  token_arrival_sequence_test.dart
test/render/: selection_strict_test.dart  streaming_markdown_test.dart  stress_test.dart  token_arrival_sequence_test.dart
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
website/static/: CNAME
windows/: CMakeLists.txt
(+52 files in other folders)
